--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     />
     <title>DoctorCare</title>
   </head>
-  <body onscroll="onScroll()" class="menu-expanded">
-    <nav id="navigation" class="scroll">
+  <body onscroll="onScroll()" >
+    <nav id="navigation" class="">
       <div class="wrapper">
-        <a class="logo" href="#">
+        <a class="logo" href="#home">
           <svg
             width="133"
             height="18"
@@ -72,9 +72,9 @@
         </a>
         <div class="menu">
           <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Serviço</a></li>
-            <li><a href="#">Sobre</a></li>
+            <li><a href="#home" onclick="closeMenu()"">Inicio</a></li>
+            <li><a href="#services" onclick="closeMenu()">Serviço</a></li>
+            <li><a href="#about" onclick="closeMenu()">Sobre</a></li>
           </ul>
           <a class="button" href="#">Agende sua consulta</a>
           <ul class="social-links">
@@ -158,7 +158,7 @@
             </li>
           </ul>
         </div>
-        <button class="open-menu">
+        <button onclick="openMenu()" class="open-menu">
           <svg
             width="40"
             height="40"
@@ -189,7 +189,7 @@
             />
           </svg>
         </button>
-        <button class="close-menu">
+        <button onclick="closeMenu()" class="close-menu">
           <svg
             width="40"
             height="40"
@@ -209,9 +209,14 @@
       </div>
     </nav>
 
-    <header class="wrapper">
+    <section id="home" >
+
+      <div class="wrapper">
+        <header>
       <h4>BOAS-VINDAS A DOCTORCARE 👋</h4>
       <h1>Assistência médica simplificada para todos</h1>
+    </header>
+    <div class="content">
       <p>
         Os médicos da DoctorCare vão além dos sintomas para tratar a causa raiz
         de sua doença e proporcionar uma cura a longo prazo.
@@ -226,7 +231,7 @@
         alt="Mulher carinhosa"
         class="imagemmulher"
       />
-
+    </div>
       <div class="stats">
         <div class="stat">
           <h3>+3.500</h3>
@@ -241,7 +246,177 @@
           <p>Anos de mercado</p>
         </div>
       </div>
-    </header>
+    </div>
+    </section>
+
+    <section id="services">
+      <div class="wrapper">
+        <header>
+          <h4>SERVIÇOS</h4>
+          <h2>Como podemos ajudá-lo a se sentir melhor?</h2>
+        </header>
+        <div class="content">
+        <div class="cards">
+          <div class="card">
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <circle cx="12" cy="12" r="12" fill="#DCE9E2" />
+              <path
+                d="M17.091 8.18182L10.091 15.1818L6.90918 12"
+                stroke="#00856F"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+
+            <h3>Problemas digestivos</h3>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim.
+            </p>
+          </div>
+          <div class="card">
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <circle cx="12" cy="12" r="12" fill="#DCE9E2" />
+              <path
+                d="M17.091 8.18182L10.091 15.1818L6.90918 12"
+                stroke="#00856F"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+            <h3>Saúde Hormonal</h3>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim.
+            </p>
+          </div>
+          <div class="card">
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <circle cx="12" cy="12" r="12" fill="#DCE9E2" />
+              <path
+                d="M17.091 8.18182L10.091 15.1818L6.90918 12"
+                stroke="#00856F"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+            <h3>Bem-estar mental</h3>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim.
+            </p>
+          </div>
+          <div class="card">
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <circle cx="12" cy="12" r="12" fill="#DCE9E2" />
+              <path
+                d="M17.091 8.18182L10.091 15.1818L6.90918 12"
+                stroke="#00856F"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+            <h3>Cuidados Pediátricos</h3>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim.
+            </p>
+          </div>
+          <div class="card">
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <circle cx="12" cy="12" r="12" fill="#DCE9E2" />
+              <path
+                d="M17.091 8.18182L10.091 15.1818L6.90918 12"
+                stroke="#00856F"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+            <h3>Autoimune e Inflamação</h3>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim.
+            </p>
+          </div>
+          <div class="card">
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <circle cx="12" cy="12" r="12" fill="#DCE9E2" />
+              <path
+                d="M17.091 8.18182L10.091 15.1818L6.90918 12"
+                stroke="#00856F"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+            <h3>Saúde do Coração</h3>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim.
+            </p>
+          </div>
+        </div>
+      </div>
+      </div>
+    </section>
+
+    <section id="about">
+        <div class="wrapper">
+          <header>
+          <h4>SOBRE NÓS</h4>
+          <h2>Entenda quem somos e por que existimos</h2>
+        </header>
+        <div class="content">
+          <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</p>
+          
+          <img src="/assets/doctor.png" alt="Doutor Feliz">
+          </div>
+        </div>
+
+    </section>
+    <!--- ScrollReaveal Lib -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="main.js"></script>
   </body>
-  <script src="main.js"></script>
 </html>
