--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             Agende sua consulta</a
           >
           <img
-            src="/assets/mulhernegra.png"
+            src="/C:/Users/victo/Desktop/NLW/DoctorCare/assets/mulhernegra.png"
             alt="Mulher carinhosa"
             class="imagemmulher"
           />
@@ -430,7 +430,10 @@
             ullamco est sit aliqua dolor do amet sint.
           </p>
 
-          <img src="/assets/doctor.png" alt="Doutor Feliz" />
+          <img
+            src="/C:/Users/victo/Desktop/NLW/DoctorCare/assets/doctor.png"
+            alt="Doutor Feliz"
+          />
         </div>
       </div>
     </section>
@@ -509,7 +512,7 @@
             >
           </ul>
           <img
-            src="/assets/homemcelular.png"
+            src="/C:/Users/victo/Desktop/NLW/DoctorCare/assets/homemcelular.png"
             alt="Homen negro segurando celular"
           />
         </div>
