--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         </div>
         <div class="col-b">
           <img
-            src="/DoctorCare/assets/mulhernegra.png"
+            src="/assets/mulhernegra.png"
             alt="Mulher carinhosa"
             class="imagemmulher"
           />
@@ -434,7 +434,7 @@
         </div>
         <div class="col-b">
           <img
-            src="/DoctorCare/assets/doctor.png"
+            src="/assets/doctor.png"
             alt="Doutor Feliz"
             class="doutorfeliz"
           />
@@ -520,7 +520,7 @@
         </div>
         <div class="col-b">
           <img
-            src="/DoctorCare/assets/homemcelular.png"
+            src="/assets/homemcelular.png"
             alt="Homen negro segurando celular"
             class="homennegro"
           />
